--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ azure-core
 bitsandbytes; platform_system != "Windows"
 #llama-cpp-python==0.1.34; platform_system != "Windows"
 #https://github.com/abetlen/llama-cpp-python/releases/download/v0.1.34/llama_cpp_python-0.1.34-cp310-cp310-win_amd64.whl; platform_system == "Windows"
-
+protobuf==3.19.5
 torch~=2.0.0
 pydantic~=1.10.7
 starlette~=0.26.1
